@@ -2,7 +2,10 @@ package edu.mcw.rgd.data;
 
 
 
+import edu.mcw.rgd.datamodel.TranscriptFeature;
+
 import java.util.ArrayList;
+import java.util.List;
 
 /**
  * Created by hsnalabolu on 12/4/2019.
@@ -22,6 +25,78 @@ public class EnsemblTranscript {
     String type;
 
     ArrayList<EnsemblExon> exonList = new ArrayList<EnsemblExon>();
+
+    public List<TranscriptFeature> getUtrs() {
+        int cdsStart = 0;
+        int cdsStop = 0;
+        for( EnsemblExon exon: exonList ) {
+            if( exon.getCdsStart()>0 ) {
+                if( cdsStart==0 || exon.getCdsStart()<cdsStart ) {
+                    cdsStart = exon.getCdsStart();
+                }
+            }
+            if( exon.getCdsStop()>0 ) {
+                if( cdsStop==0 || exon.getCdsStop()>cdsStop ) {
+                    cdsStop = exon.getCdsStop();
+                }
+            }
+        }
+
+        if( cdsStart==0 || cdsStop==0 ) {
+            return null; // no CDS
+        }
+        if( cdsStart==start && cdsStop==stop ) {
+            return null; // no CDS
+        }
+
+        // there are some UTRs
+        List<TranscriptFeature> utrs = new ArrayList<>();
+        if( getStrand().equals("+") ) {
+            if( cdsStart>start ) {
+                TranscriptFeature tf = new TranscriptFeature();
+                tf.setFeatureType(TranscriptFeature.FeatureType.UTR5);
+                tf.setChromosome(chromosome);
+                tf.setStrand(strand);
+                tf.setStartPos(start);
+                tf.setStopPos(cdsStart-1);
+                utrs.add(tf);
+            }
+
+            if( cdsStop<stop ) {
+                TranscriptFeature tf = new TranscriptFeature();
+                tf.setFeatureType(TranscriptFeature.FeatureType.UTR3);
+                tf.setChromosome(chromosome);
+                tf.setStrand(strand);
+                tf.setStartPos(cdsStop+1);
+                tf.setStopPos(stop);
+                utrs.add(tf);
+            }
+        }
+        else if( getStrand().equals("-") ) {
+            if( cdsStart>start ) {
+                TranscriptFeature tf = new TranscriptFeature();
+                tf.setFeatureType(TranscriptFeature.FeatureType.UTR3);
+                tf.setChromosome(chromosome);
+                tf.setStrand(strand);
+                tf.setStartPos(start);
+                tf.setStopPos(cdsStart-1);
+                utrs.add(tf);
+            }
+
+            if( cdsStop<stop ) {
+                TranscriptFeature tf = new TranscriptFeature();
+                tf.setFeatureType(TranscriptFeature.FeatureType.UTR5);
+                tf.setChromosome(chromosome);
+                tf.setStrand(strand);
+                tf.setStartPos(cdsStop+1);
+                tf.setStopPos(stop);
+                utrs.add(tf);
+            }
+        } else {
+            System.out.println("unknown strand");
+        }
+        return utrs;
+    }
 
     public int getRgdId() {
         return rgdId;
